Add oninput event to text box for search

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1 id="introTextHeading">Welcome to Search Flowers</h1>
-    <input id="textBox">
+    <input id="textBox" oninput="search()">
     <button onclick="search()">Search</button>
     <div id="resultsBox">
         <ul id="resultsUL">
