--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1 id="introTextHeading">Welcome to Search Flowers</h1>
-    <input id="textBox" oninput="search()">
+    <input type="text" id="textBox" oninput="search()">
     <button onclick="search()">Search</button>
     <div id="resultsBox">
         <ul id="resultsUL">
@@ -95,7 +95,6 @@
             let counter = 0;
             let searchText = textBox.value;
             searchText = searchText.toLowerCase();
-            textBox.value = "";
 
             for (let eachFlower of flowers) {
                 if (eachFlower.includes(searchText)) {
