--- a/index.html
+++ b/index.html
@@ -17,69 +17,126 @@
         const textBox = document.getElementById("textBox");
         const introText = document.getElementById("introTextHeading");
         const flowers = [
-            "anemone",
-            "amaryllis",
-            "amaranth",
-            "aster",
-            "azalea",
-            "babys breath",
-            "begonia",
-            "bellflower",
-            "bergamot",
-            "bird of paradise",
-            "bluebell",
-            "bottlebrush",
-            "buttercup",
-            "camellias",
-            "carnation",
-            "chrysantemum",
-            "columbine",
-            "clover",
-            "crocus",
-            "daisy",
-            "dahlia",
-            "daffodil",
-            "delphinium",
-            "edelweiss",
-            "primrose",
-            "forget me not",
-            "foxglove",
-            "freesia",
-            "gerbera daisy",
-            "gladiolus",
-            "hibiscus",
-            "heather",
-            "hyacinth",
-            "holly",
-            "iris",
-            "jasmine",
-            "ladys slipper",
-            "lavender",
-            "lilac",
-            "lily",
-            "lotus flower",
-            "marigold",
-            "marjoram",
-            "mimosa",
-            "narcissus",
-            "orange blossom",
-            "orchid",
-            "peach blossom",
-            "peony",
-            "petunia",
-            "rhododendron",
-            "rosemary",
-            "roses",
-            "sage",
-            "snapdragon",
-            "sunflower",
-            "tansy",
-            "thistle",
-            "thyme",
-            "tulip",
-            "violet",
-            "water lily",
-            "zinnia"
+            "african daisy",
+    "amaryllis",
+    "amazon lily",
+    "anemone",
+    "anthurium",
+    "aster",
+    "astilbe",
+    "azalea",
+    "baby's breath",
+    "begonia",
+    "bells of ireland",
+    "bird-of-paradise",
+    "bleeding heart",
+    "broom",
+    "calendula",
+    "camellia",
+    "cardinal flower",
+    "carnation",
+    "celosia",
+    "cherry blossom",
+    "chrysanthemum",
+    "cleome",
+    "columbine",
+    "coneflower",
+    "coreopsis",
+    "cornflower",
+    "cosmos",
+    "daffodil",
+    "dahlia",
+    "daisy",
+    "dandelion",
+    "daylily",
+    "deli",
+    "echinacea",
+    "eustoma",
+    "evening primrose",
+    "false spirea",
+    "feverfew",
+    "forget-me-not",
+    "foxglove",
+    "freesia",
+    "gardenia",
+    "gentian",
+    "geranium",
+    "gerbera",
+    "gladiolus",
+    "goatsbeard",
+    "golden ray",
+    "goldenrod",
+    "heather",
+    "hellebore",
+    "heliotrope",
+    "hibiscus",
+    "hollyhock",
+    "honeysuckle",
+    "hosta",
+    "hyacinth",
+    "hydrangea",
+    "impatiens",
+    "iris",
+    "ixora",
+    "jasmine",
+    "kalanchoe",
+    "lantana",
+    "lavender",
+    "lilac",
+    "lily",
+            "lily of the valley",
+    "lotus",
+    "lupine",
+    "marigold",
+    "mock orange",
+    "mogra",
+    "moonflower",
+    "muscari",
+    "narcissus",
+    "nasturtium",
+    "nemesia",
+    "nicotiana",
+    "oleander",
+    "orchid",
+    "osteospermum",
+    "pansy",
+    "passionflower",
+    "peony",
+    "pelargonium",
+    "penstemon",
+    "petunia",
+    "phlox",
+    "pincushion flower",
+    "plumeria",
+    "poinsettia",
+    "poppy",
+    "primrose",
+    "protea",
+    "queen anne's lace",
+    "ranunculus",
+    "rose",
+    "rudbeckia",
+    "salvia",
+    "scabiosa",
+    "sea holly",
+    "sedum",
+    "shasta daisy",
+    "snapdragon",
+    "stock",
+    "sunflower",
+    "sweet alyssum",
+    "sweet pea",
+    "sweet william",
+    "tulip",
+    "verbena",
+    "veronica",
+    "vinca",
+    "viola",
+    "wallflower",
+    "water lily",
+    "weigela",
+    "yarrow",
+    "zinnia"
         ]
 
         function addToList(input) {
