Correct early return logic in search function
Fix early return condition for empty search text.

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
             let searchText = textBox.value;
             searchText = searchText.toLowerCase();
 
+            if (searchText = "") {
+                removeOldList();
+                return "end early"
+            }
+
             for (let eachFlower of flowers) {
                 if (eachFlower.includes(searchText)) {
                     addToList(eachFlower)
