Fix return statement formatting in search function

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             if (!searchText) {
                 removeOldList();
-                return 
+                return;
             }
 
             for (let eachFlower of flowers) {
