--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     counter++;
                 } }
             if (counter == 0){
-                    addToList(searchText + ' Not Found')
+                    addToList('<b>' + searchText + ' </b> not found')
                 }
         }
 
