Refactor flower data structure and improve search functionality

--- a/index.html
+++ b/index.html
@@ -14,135 +14,149 @@
         </ul>
     </div>
     <script>
+        function Flower(name, uri) {
+            this.name = name;
+            this.uri = uri;
+
+            // if (!uri) {
+            //     this.uri = 'https://google.com'
+            // }
+        }
         const textBox = document.getElementById("textBox");
         const introText = document.getElementById("introTextHeading");
         const flowers = [
-            "african daisy",
-    "amaryllis",
-    "amazon lily",
-    "anemone",
-    "anthurium",
-    "aster",
-    "astilbe",
-    "azalea",
-    "baby's breath",
-    "begonia",
-    "bells of ireland",
-    "bird-of-paradise",
-    "bleeding heart",
-    "broom",
-    "calendula",
-    "camellia",
-    "cardinal flower",
-    "carnation",
-    "celosia",
-    "cherry blossom",
-    "chrysanthemum",
-    "cleome",
-    "columbine",
-    "coneflower",
-    "coreopsis",
-    "cornflower",
-    "cosmos",
-    "daffodil",
-    "dahlia",
-    "daisy",
-    "dandelion",
-    "daylily",
-    "deli",
-    "echinacea",
-    "eustoma",
-    "evening primrose",
-    "false spirea",
-    "feverfew",
-    "forget-me-not",
-    "foxglove",
-    "freesia",
-    "gardenia",
-    "gentian",
-    "geranium",
-    "gerbera",
-    "gladiolus",
-    "goatsbeard",
-    "golden ray",
-    "goldenrod",
-    "heather",
-    "hellebore",
-    "heliotrope",
-    "hibiscus",
-    "hollyhock",
-    "honeysuckle",
-    "hosta",
-    "hyacinth",
-    "hydrangea",
-    "impatiens",
-    "iris",
-    "ixora",
-    "jasmine",
-    "kalanchoe",
-    "lantana",
-    "lavender",
-    "lilac",
-    "lily",
-            "lily of the valley",
-    "lotus",
-    "lupine",
-    "marigold",
-    "mock orange",
-    "mogra",
-    "moonflower",
-    "muscari",
-    "narcissus",
-    "nasturtium",
-    "nemesia",
-    "nicotiana",
-    "oleander",
-    "orchid",
-    "osteospermum",
-    "pansy",
-    "passionflower",
-    "peony",
-    "pelargonium",
-    "penstemon",
-    "petunia",
-    "phlox",
-    "pincushion flower",
-    "plumeria",
-    "poinsettia",
-    "poppy",
-    "primrose",
-    "protea",
-    "queen anne's lace",
-    "ranunculus",
-    "rose",
-    "rudbeckia",
-    "salvia",
-    "scabiosa",
-    "sea holly",
-    "sedum",
-    "shasta daisy",
-    "snapdragon",
-    "stock",
-    "sunflower",
-    "sweet alyssum",
-    "sweet pea",
-    "sweet william",
-    "tulip",
-    "verbena",
-    "veronica",
-    "vinca",
-    "viola",
-    "wallflower",
-    "water lily",
-    "weigela",
-    "yarrow",
-    "zinnia"
-        ]
+            new Flower("african daisy", 'https://google.com'),
+            new Flower("amaryllis", 'https://google.com'),
+            new Flower("amazon lily", 'https://google.com'),
+            new Flower("anemone", 'https://google.com'),
+            new Flower("anthurium", 'https://google.com'),
+            new Flower("aster", 'https://google.com'),
+            new Flower("astilbe", 'https://google.com'),
+            new Flower("azalea", 'https://google.com'),
+            new Flower("baby's breath", 'https://google.com'),
+            new Flower("begonia", 'https://google.com'),
+            new Flower("bells of ireland"),
+            new Flower("bird-of-paradise"),
+            new Flower("bleeding heart"),
+            new Flower("broom"),
+            new Flower("calendula"),
+            new Flower("camellia"),
+            new Flower("cardinal flower"),
+            new Flower("carnation"),
+            new Flower("celosia"),
+            new Flower("cherry blossom"),
+            new Flower("chrysanthemum"),
+            new Flower("cleome"),
+            new Flower("columbine"),
+            new Flower("coneflower"),
+            new Flower("coreopsis"),
+            new Flower("cornflower"),
+            new Flower("cosmos"),
+            new Flower("daffodil"),
+            new Flower("dahlia"),
+            new Flower("daisy"),
+            new Flower("dandelion"),
+            new Flower("daylily"),
+            new Flower("deli"),
+            new Flower("echinacea"),
+            new Flower("eustoma"),
+            new Flower("evening primrose"),
+            new Flower("false spirea"),
+            new Flower("feverfew"),
+            new Flower("forget-me-not"),
+            new Flower("foxglove"),
+            new Flower("freesia"),
+            new Flower("gardenia"),
+            new Flower("gentian"),
+            new Flower("geranium"),
+            new Flower("gerbera"),
+            new Flower("gladiolus"),
+            new Flower("goatsbeard"),
+            new Flower("golden ray"),
+            new Flower("goldenrod"),
+            new Flower("heather"),
+            new Flower("hellebore"),
+            new Flower("heliotrope"),
+            new Flower("hibiscus"),
+            new Flower("hollyhock"),
+            new Flower("honeysuckle"),
+            new Flower("hosta"),
+            new Flower("hyacinth"),
+            new Flower("hydrangea"),
+            new Flower("impatiens"),
+            new Flower("iris"),
+            new Flower("ixora"),
+            new Flower("jasmine"),
+            new Flower("kalanchoe"),
+            new Flower("lantana"),
+            new Flower("lavender"),
+            new Flower("lilac"),
+            new Flower("lily"),
+            new Flower("lily of the valley"),
+            new Flower("lotus"),
+            new Flower("lupine"),
+            new Flower("marigold"),
+            new Flower("mock orange"),
+            new Flower("mogra"),
+            new Flower("moonflower"),
+            new Flower("muscari"),
+            new Flower("narcissus"),
+            new Flower("nasturtium"),
+            new Flower("nemesia"),
+            new Flower("nicotiana"),
+            new Flower("oleander"),
+            new Flower("orchid"),
+            new Flower("osteospermum"),
+            new Flower("pansy"),
+            new Flower("passionflower"),
+            new Flower("peony"),
+            new Flower("pelargonium"),
+            new Flower("penstemon"),
+            new Flower("petunia"),
+            new Flower("phlox"),
+            new Flower("pincushion flower"),
+            new Flower("plumeria"),
+            new Flower("poinsettia"),
+            new Flower("poppy"),
+            new Flower("primrose"),
+            new Flower("protea"),
+            new Flower("queen anne's lace"),
+            new Flower("ranunculus"),
+            new Flower("rose"),
+            new Flower("rudbeckia"),
+            new Flower("salvia"),
+            new Flower("scabiosa"),
+            new Flower("sea holly"),
+            new Flower("sedum"),
+            new Flower("shasta daisy"),
+            new Flower("snapdragon"),
+            new Flower("stock"),
+            new Flower("sunflower"),
+            new Flower("sweet alyssum"),
+            new Flower("sweet pea"),
+            new Flower("sweet william"),
+            new Flower("tulip"),
+            new Flower("verbena"),
+            new Flower("veronica"),
+            new Flower("vinca"),
+            new Flower("viola"),
+            new Flower("wallflower"),
+            new Flower("water lily"),
+            new Flower("weigela"),
+            new Flower("yarrow"),
+            new Flower("zinnia")
+    ];
 
         function addToList(input) {
             const node = document.createElement("li");
-            const textnode = document.createTextNode(input);
-            node.appendChild(textnode);
+            if (!input.uri) {
+                node.textContent = input.name;
+            } else {
+                const linknode = document.createElement('a');
+                linknode.href = input.uri;
+                linknode.textContent = input.name;
+                node.appendChild(linknode);
+            }
             document.getElementById("resultsUL").appendChild(node);
 
         }
@@ -153,6 +167,7 @@
             let searchText = textBox.value;
             searchText = searchText.toLowerCase();
             searchText = searchText.trim();
+            flowers.sort()
 
             if (!searchText) {
                 removeOldList();
@@ -160,13 +175,17 @@
             }
 
             for (let eachFlower of flowers) {
-                if (eachFlower.includes(searchText)) {
+                //debugger;
+                if (eachFlower.name.includes(searchText)) {
                     addToList(eachFlower)
                     counter++;
-                } }
-            if (counter == 0){
-                    addToList('<b>' + searchText + ' </b> not found')
                 }
+            }
+            if (counter == 0) {
+                const node = document.createElement("li");
+                node.innerHTML = `<b> ${searchText} </b> not found`
+                document.getElementById("resultsUL").appendChild(node);
+            }
         }
 
         function removeOldList() {
