--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1 id="introTextHeading">Welcome to Search Flowers</h1>
     <input type="text" id="textBox" oninput="search()">
-    <button onclick="search()">Search</button>
+    <noscript><button onclick="search()">Search</button></noscript>
     <div id="resultsBox">
         <ul id="resultsUL">
 
