added some links

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         const textBox = document.getElementById("textBox");
         const introText = document.getElementById("introTextHeading");
         const flowers = [
-            new Flower("african daisy", 'https://google.com'),
-            new Flower("amaryllis", 'https://google.com'),
-            new Flower("amazon lily", 'https://google.com'),
-            new Flower("anemone", 'https://google.com'),
-            new Flower("anthurium", 'https://google.com'),
-            new Flower("aster", 'https://google.com'),
-            new Flower("astilbe", 'https://google.com'),
-            new Flower("azalea", 'https://google.com'),
-            new Flower("baby's breath", 'https://google.com'),
-            new Flower("begonia", 'https://google.com'),
-            new Flower("bells of ireland"),
-            new Flower("bird-of-paradise"),
-            new Flower("bleeding heart"),
+            new Flower("african daisy", 'https://en.wikipedia.org/wiki/Osteospermum'),
+            new Flower("amaryllis", 'https://en.wikipedia.org/wiki/Amaryllis'),
+            new Flower("amazon lily", 'https://en.wikipedia.org/wiki/Urceolina'),
+            new Flower("anemone", 'https://en.wikipedia.org/wiki/Anemone'),
+            new Flower("anthurium", 'https://en.wikipedia.org/wiki/Anthurium'),
+            new Flower("aster", 'https://en.wikipedia.org/wiki/Aster_(genus)'),
+            new Flower("astilbe", 'https://en.wikipedia.org/wiki/Astilbe'),
+            new Flower("azalea", 'https://en.wikipedia.org/wiki/Azalea'),
+            new Flower("baby's breath", 'https://en.wikipedia.org/wiki/Gypsophila'),
+            new Flower("begonia", 'https://en.wikipedia.org/wiki/Begonia'),
+            new Flower("bells of ireland", 'https://en.wikipedia.org/wiki/Moluccella_laevis'),
+            new Flower("bird-of-paradise", 'https://en.wikipedia.org/wiki/Bird-of-paradise'),
+            new Flower("bleeding heart", 'https://en.wikipedia.org/wiki/Papaveraceae'),
             new Flower("broom"),
             new Flower("calendula"),
             new Flower("camellia"),
